argocd/aws/203403084713/clusters/cbioportal-prod/apps/cell-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cell-explorer-ingress
  namespace: cell-explorer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/instance: cell-explorer
spec:
  rules:
    - host: cell-explorer.cbioportal.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cell-explorer
                port:
                  number: 8000
  tls:
    - hosts:
        - cell-explorer.cbioportal.org
      secretName: cell-explorer-cbioportal-cert
